# dean

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  index.md
.github/workflows/: ci.yml  vulns.yml
src/: factory.rs  lazy.rs  lib.rs  main.rs
src/cmd/: mod.rs
src/infra/: cache.rs  cached_issue_client.rs  clock.rs  commit_store.rs  git.rs  github.rs  http.rs  issue_store.rs  mod.rs  npm.rs  repo_contribution.rs
src/infra/issue_store/: mod.rs  sqlite.rs  surrealdb.rs
src/infra/package_manager/: cargo.rs  npm.rs
src/npm/: mod.rs
src/pkg/: config.rs  csv.rs  engine.rs  iter.rs  mod.rs  npm.rs  policy.rs  recognizer.rs
src/pkg/config/: contributors_ratio.rs  max_issue_lifespan.rs  max_pull_request_lifespan.rs  min_number_of_releases_required.rs  mod.rs
src/pkg/format/: csv.rs
src/pkg/package_manager/: cargo.rs  mod.rs  npm.rs  yarn.rs
src/pkg/policy/: contributors_ratio.rs  max_issue_lifespan.rs  max_pull_request_lifespan.rs  min_number_of_releases_required.rs  mod.rs
tests/: test.rs
tests/fixtures/: package-lock.json
