[package]
name = "dean"
version = "0.0.1"
edition = "2021"
authors = ["fede@federico.barcelona"]
description = "Static (De)pendency (An)alyzer"
repository = "https://github.com/StaticDependencyAnalyzer/dean"
readme = "README.md"
keywords = [
    "dependency",
    "dependencies",
    "analysis"
]
categories = [
    "development-tools",
]
license = "custom"

[features]
default = []
experimental = ["experimental-surrealdb"]
experimental-surrealdb = ["dep:surrealdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
toml = "0.5.9"
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"] }
regex = "1.5.5"
log = "0.4.14"
simple_logger = "2.1.0"
git2 = { version = "0.16.0", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.3.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }
itertools = "0.10.3"
serde_yaml = "0.9.4"
dirs-next = "2.0.0"
lazy_static = "1.4.0"
time = { version = "0.3.9", features = ["parsing"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.57"
csv-async = { version = "1.2.4", features = ["tokio"] }
tokio-stream = "0.1.11"
moka = { version = "0.9.4", features = ["future"] }
async-recursion = "1.0.0"
futures = "0.3.25"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", branch = "main",features=["kv-mem", "kv-rocksdb"], optional = true }

[dev-dependencies]
mockall = "0.11.0"
rand = "0.8.5"
